package org.example.sample2.model;


import lombok.Data;
import lombok.*;

@Data
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class Sample2Dto {
    private java.lang.String param1;
    private java.lang.String param2;
    private java.lang.String param3;
}
