@startuml

class Sample2Dto {
    - param1 String
    - param2 String
    - param3 String
}

class Sample2Domain {
    - param1 String
    - param2 Integer
    - domainParam3:Integer
}

interface Sample2Dto2DomainMapper{
    + toDomain(dto Sample1Dto) : Sample1Domain
}

class Sample2Dto2DomainConverter {
    
    + @Named("toInt") Integer convert1(String value);
}

Sample2Dto2DomainMapper .> Sample2Dto2DomainConverter:<<use>>
Sample2Dto .> Sample2Domain :copy
Sample2Dto2DomainMapper ..> Sample2Dto: from
Sample2Dto2DomainMapper ..> Sample2Domain: to
@enduml